syntax = "proto3";

package pay.pb;
option go_package="./pay/pb";

message PayCodeReq {
  int64 userId = 1;
  int64 orderId = 2;
  PayPlatform platform = 3;
  float amount = 4;
  string subject = 5;
}

message Resp {
  int64 code = 1;
  string msg = 2;
}

message PayCodeRes {
  Resp resp = 1;
  PayCode data = 2;
}

message PayCode {
  int64 orderId = 1;
  string payUrl = 2;
  PayStatus status = 3;
  string expireAt = 4;
}

enum PayStatus {
  PENDING = 0;
  SUCCESS = 1;
  FAIL = 2;
}

enum PayPlatform {
  __UNKNOWN__ = 0;
  ALIPAY = 1;
  WECHAT = 2;
}

service Pay {
  rpc GetPayCode(PayCodeReq) returns(PayCodeRes);
}
